# Vulkanizer

./: CMakeLists.txt  Doxyfile  README.md
cmake/: vulzrConfig.cmake.in
vulzr/: functions.hpp  functions.inl  objects.hpp  version.hpp  vulzr.hpp
vulzr/object/: commandbuffer.hpp  commandbuffer.inl  device.hpp  device.inl  image.hpp  image.inl  instance.hpp  instance.inl  queue.hpp  queue.inl  renderpass.hpp  renderpass.inl
